--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smartest-scss",
+  "name": "smartscss",
   "version": "1.0.2",
   "description": "The best time-saver scss tool for your day to day life",
   "main": "index.js",
