--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "smartscss",
-  "version": "1.0.3",
+  "name": "smartest-scss",
+  "version": "1.0.2",
   "description": "The best time-saver scss tool for your day to day life",
   "main": "index.js",
   "scripts": {
