--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
   "bugs": {
     "url": "https://github.com/psuresh21/smartscss/issues"
   },
-  "homepage": "https://github.com/psuresh21/smartscss#readme",
+  "homepage": "https://github.com/psuresh21/smartscss#readme"
 }
