--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smartest-scss",
+  "name": "smartscss",
   "version": "1.0.5",
   "description": "A Best sass framework for build typography, colors, grid, and many things too",
   "main": "index.js",
