--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "smartest-scss",
-  "version": "1.0.5",
+  "name": "smartscss",
+  "version": "1.0.0",
   "description": "A Best sass framework for build typography, colors, grid, and many things too",
   "main": "index.js",
   "scripts": {
